overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ header img {
     text-align: center;
     min-width: 32rem;
     background-color: var(--off-white);
+    padding-bottom: 3rem;
 }
 
 .main--coins img {
@@ -108,15 +109,34 @@ header img {
 
 }
 
-.coins--money-table {
+.coins--table__slider {
+
+    display: flex;
+    justify-content: flex-start;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+    width: 100%;
+    height: 33rem;
+
+}
+
+.coins--card__container {
+
+    min-width: 19rem;
+    margin: 0rem 6.5rem;
+    scroll-snap-align: center;
+
+}
+
+.coins--table {
 
     margin-top: 3rem;
-    width: 19rem;
     text-align: left;
 
 }
 
-.coins--money-table h3{
+.coins--table h3{
 
     font-size: 1.8rem;
     color: var(--bitcoin-orange);
@@ -124,7 +144,7 @@ header img {
 
 }
 
-.coins--money-table table {
+.coins--table table {
 
     width: 100%;
     text-align: left;
@@ -133,7 +153,7 @@ header img {
 
 }
 
-.coins--money-table table td, .coins--money-table table th{
+.coins--table table td, .coins--table table th{
 
     background-color: var(--just-white);
     padding: 1rem 1.2rem;
@@ -143,7 +163,7 @@ header img {
 
 }
 
-.coins--money-table td {
+.coins--table table td {
 
     flex-direction: row;
     display: flex;
@@ -152,7 +172,7 @@ header img {
 
 }
 
-.coins--money-table table td span{
+.coins--table table td span{
 
     width: 1.3rem;
     height: 1rem;
@@ -161,10 +181,11 @@ header img {
 
 }
 
-.coins--money-table table th{
+.coins--table table th{
 
     font-weight: 500;
     color: var(--grey);
+    width: 60%;
 
 }
 
@@ -191,14 +212,13 @@ header img {
 
 }
 
-.coins--date {
+.coins--table-footer {
 
     margin-top: 2rem;
     background-color: var(--soft-orange);
     padding: 5px;
     font-size: 1.2rem;
     border-radius: 0.5rem;
-    margin-bottom: 6rem;
 
 }
 
@@ -211,6 +231,18 @@ header img {
 .up {
 
     background-image: url('../assets/icons/trending-up.svg');
+
+}
+
+.balance h3{
+
+    color: var(--secondary-blue)
+
+}
+
+.table-footer--blue {
+
+    background-color: var(--soft-blue);
 
 }
 
@@ -381,7 +413,6 @@ header img {
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
 
-
 }
 
 .plan {
@@ -395,8 +426,10 @@ header img {
     scroll-snap-align: center;
     border-radius: 1rem;
     padding: 2rem;
-    width: 19rem;
+    width: 55%;
+    min-width: 190px;
     min-height: 23rem;
+    margin: 0px 1rem;
     box-shadow: 0rem 0.4rem 1rem rgba(0, 0, 0, 0.08);
     
 }
